--- a/Challenge 3.2
+++ b/Challenge 3.2
@@ -13,4 +13,4 @@ students ("sowniya", "A125", 9.1),
 students (" mani", "A126", 9.9) 
 ]
 sorted_students=sort_students (students)for students in sorted_students:
-print(" num:{}, rollnumber:{}, CGPA:{}".format(students.name, students. roll_number, students. cgpa)
+print(" num:{}, rollnumber:{}, CGPA:{}".format(students.name, students. roll_number, students. cgpa))
